<resources>
    <string name="app_name">OpenInApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_user_id">Enter User Id</string>
    <string name="number_one">1</string>
    <string name="proceed">Proceed</string>
    <string name="user_id_not_found">User Id Not Found</string>
    <string name="user_idnot_empty">User Id cannot be empty</string>
    <string name="nothing_found">Nothing Found</string>
    <string name="links">Links</string>
    <string name="courses">Courses</string>
    <string name="campaigns">Campaigns</string>
    <string name="profiles">Profiles</string>
    <string name="add_button">Add Button</string>
    <string name="curve">Curve</string>
    <string name="dashboard">Dashboard</string>
    <string name="settings_icon">Settings Icon</string>
    <string name="todays_clicks">Today\'s Clicks</string>
    <string name="top_location">Top Location</string>
    <string name="top_source">Top Source</string>
    <string name="best_time">Best Time</string>
    <string name="top_links">Top Links</string>
    <string name="recent_links">Recent Links</string>
    <string name="view_all_links">View all Links</string>
    <string name="talk_with_us">Talk with us</string>
    <string name="frequently_asked_questions">Frequently Asked Questions</string>
    <string name="item_icon">Item Icon</string>
    <string name="title">Title</string>
    <string name="subtitle">Subtitle</string>
    <string name="clicks">Clicks</string>
    <string name="copy_link">Copy Link</string>
    <string name="good_morning">Good morning!</string>
    <string name="good_afternoon">Good afternoon!</string>
    <string name="good_evening">Good evening!</string>
    <string name="good_night">Good night!</string>
    <string name="courses_fragment">Courses Feature \ncoming soon..</string>
    <string name="campaigns_fragment">Campaigns Feature \ncoming soon..</string>
    <string name="profile_fragment">Profile Feature \ncoming soon..</string>
    <string name="chart_date_range">%1\$s - %2\$s</string>
</resources>