<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_medium"
        android:elevation="0dp"
        app:cardCornerRadius="@dimen/margin_small">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/padding_medium">

            <ImageView
                android:id="@+id/ivURLThumbnail"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginStart="@dimen/padding_medium"
                android:background="@drawable/border_grey_dashboard"
                android:contentDescription="@string/item_icon"
                android:padding="1dp"
                android:scaleType="fitCenter"
                android:src="@drawable/item_image"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvLinkTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/padding_medium"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/title"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintEnd_toStartOf="@+id/guideline2"
                app:layout_constraintStart_toEndOf="@+id/ivURLThumbnail"
                app:layout_constraintTop_toTopOf="@+id/ivURLThumbnail" />

            <TextView
                android:id="@+id/tvLinkDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/padding_medium"
                android:layout_marginTop="@dimen/margin_x_small"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/subtitle"
                android:textColor="#999CA0"
                android:textSize="14sp"
                app:layout_constraintEnd_toStartOf="@+id/guideline2"
                app:layout_constraintStart_toEndOf="@+id/ivURLThumbnail"
                app:layout_constraintTop_toBottomOf="@+id/tvLinkTitle" />

            <TextView
                android:id="@+id/tvLinkClicks"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/padding_medium"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="2323"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/ivURLThumbnail" />

            <TextView
                android:id="@+id/tvLinkClicksTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_x_small"
                android:layout_marginEnd="@dimen/padding_medium"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/clicks"
                android:textColor="#999CA0"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvLinkClicks" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/border_blue_links"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvLinkClicksTitle">

                <TextView
                    android:id="@+id/tvLinkURL"
                    android:layout_width="0dp"
                    android:layout_height="21dp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:layout_marginStart="@dimen/padding_medium"
                    android:text="@string/title"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/guideline3"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/ivLinkCopy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_weight="1.7"
                    android:clickable="true"
                    android:contentDescription="@string/copy_link"
                    android:focusable="true"
                    android:foreground="?android:selectableItemBackground"
                    android:padding="8dp"
                    android:src="@drawable/ic_copy"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_begin="261dp" /> <!-- Adjust margin as needed -->

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="261dp" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</layout>